--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
+    "geoip-lite": "^1.4.10",
     "maxmind": "^4.3.22",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request-ip": "^3.3.0"
   }
 }
